# Lab6_Semrah_Thomas

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: FreeRTOSConfig.h  FreeRTOSConfig_examples_common.h  scheduling.h
src/: CMakeLists.txt  gpio_interrupt.c  rtc.c  scheduling.c  sleep.c  task_delay.c  timer.c
test/: CMakeLists.txt  test.c
